stephan personal page and tso games

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
                 <a href="people/hooman/hooman.html">Hooman Asadian</a>
                 <a href="people/hooman/publications.html" class="sub">↪ Publications</a>
                 <a href="people/stephan/stephan.html">Stephan Spengler</a>
+                <a href="people/stephan/tso_games.html" class="sub">↪ TSO Games</a>
                 <a href="people/stephan/publications.html" class="sub">↪ Publications</a>
             </div>
             <div id="content">
