--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <base href="/uu-verification.github.io/" />
+    <base href="/" />
 
     <link rel="stylesheet" href="assets/style.css">
     <link rel="shortcut icon" href="assets/uu-logo.ico">
